--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "email-service-api",
   "version": "1.0.0",
   "main": "src/index.ts",
+  "engines": {
+    "node": "20.16.0",
+    "npm": "10.9.2"
+  },
   "scripts": {
     "dev": "ts-node-dev --respawn src/index.ts",
     "build": "npm run lint && tsc",
