--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ ACCESS_TOKEN_EXPIRE=
 REFRESH_TOKEN_EXPIRE=
 FRONTEND_URL=
 NODE_ENV=
+SENDGRID_API_KEY=
+COMPANY_NO_REPLY_EMAIL=
+SENDGRID_RESET_PASSWORD_TEMPLATE_ID=
