--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "npm run lint && tsc",
     "start": "node dist/index.js",
     "lint": "eslint . --max-warnings 0",
+    "prepare": "husky",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -43,6 +44,7 @@
     "@typescript-eslint/parser": "^8.33.1",
     "eslint": "^9.28.0",
     "globals": "^16.2.0",
+    "husky": "^9.1.7",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.33.1"
