--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,11 @@ ACCESS_TOKEN_EXPIRE=
 REFRESH_TOKEN_EXPIRE=
 FRONTEND_URL=
 NODE_ENV=
-SENDGRID_API_KEY=
-COMPANY_NO_REPLY_EMAIL=
-SENDGRID_RESET_PASSWORD_TEMPLATE_ID=
+MJ_API_KEY=
+MJ_API_SECRET_KEY=
+
+# company contacts
+COMPANY_CONTACT_PHONE=
+COMPANY_CONTACT_EMAIL=
+COMPANY_SECURITY_CONTACT_PHONE=
+COMPANY_SECURITY_CONTACT_EMAIL=
